--- a/less/levels.less
+++ b/less/levels.less
@@ -27,6 +27,8 @@
 	top: 250px !important;
 	display: block;
 	width: 100%;
+	border: 1px solid #161616;
+	box-shadow: 0 0 30px 0 #161616;
 
 	&:nth-child(2) {
 		margin-bottom: 180px;
