--- a/less/modals.less
+++ b/less/modals.less
@@ -713,7 +713,7 @@
 
 	&__number {
 		font-size: 150px;
-		color: #6ab980;
+		color: #56c074;
 		font-family: SFUIHeavy;
 
 		@media @mobile {
@@ -721,6 +721,18 @@
 			margin-right: 10px;
 			font-size: 100px;
 		}
+	}
+
+	&__number--first {
+		color: #56c074;		
+	}
+
+	&__number--second {
+		color: #d6712d;		
+	}
+
+	&__number--third {
+		color: #c2c2c2;		
 	}
 
 	&__greeting-wrapper {
