--- a/less/everyweek-cashback.less
+++ b/less/everyweek-cashback.less
@@ -65,6 +65,27 @@
 			font-size: 16px;
 			line-height: 20px;
 		}
+
+		span {
+			position: relative;
+
+			&::after {
+				content: '';
+				position: absolute;
+				bottom: -5px;
+				left: 0;
+				width: 100%;
+				height: 3px;
+				background-color: #ed383f;
+			}
+
+			@media @mobile {
+
+				&::after {
+					bottom: -3px;					
+				}
+			}
+		}
 	}
 
 	&__condition {
@@ -235,12 +256,18 @@
 	}
 }
 
+.cashback-image-wrapper {
+	background-image: url('../img/live-casino-girl.jpg');
+	background-size: 100%;
+}
+
 .cashback-description {
 
 	&__wrapper {
 		width: 1180px;
 		margin: 0 auto;
-		padding-bottom: 100px;
+		padding-top: 40px;
+		text-align: center;
 
 		@media @tablet {
 			width: 748px;
@@ -252,15 +279,43 @@
 	}
 
 	&__header {
+		position: relative;
+		display: inline-block;
 		margin-bottom: 20px;
 		text-align: center;
-		font-size: 28px;
+		font-size: 36px;
 		text-transform: uppercase;
+
+		&::after {
+			content: '';
+			position: absolute;
+			left: 0;
+			bottom: -3px;
+			width: 100%;
+			height: 4px;
+			background-color: #ed383f;
+		}
+	}
+
+	&__bottom {
+		display: block;
+		width: 540px;
+		margin-bottom: 10px;
+		padding: 50px 20px;
+		background-color: #191919;
+		font-family: SFUIHeavy;
+		font-size: 14px;
+		line-height: 22px;
+
+		@media @mobile {
+			width: 100%;
+		}
 	}
 
 	&__text-wrapper {
 		width: 800px;
 		margin: 0 auto;
+		margin-bottom: 20px;
 
 		@media @tablet {
 			width: 100%;
@@ -268,7 +323,23 @@
 	}
 
 	&__text {
+		font-size: 24px;
+		text-transform: uppercase;
 		line-height: 22px;
 		text-align: center;
+
+		span {
+			position: relative;
+
+			&::after {
+				content: '';
+				position: absolute;
+				bottom: -3px;
+				left: 0;
+				width: 100%;
+				height: 3px;
+				background-color: #ed383f;
+			}
+		}
 	}
 }
