not all changes in previous commit ;(

--- a/less/condition.less
+++ b/less/condition.less
@@ -90,9 +90,14 @@
 
 	&__count {
 		display: block;
-		margin-bottom: 10px;
+		// margin-bottom: 10px;
 		font-size: 25px;
 		font-family: SFUIHeavy;
+	}
+
+	&__count-description {
+		display: block;
+		margin-bottom: 10px;
 	}
 
 	&__description {
