--- a/less/free-spins.less
+++ b/less/free-spins.less
@@ -74,9 +74,14 @@
 		}
 	}
 
-	&__underheder-text {
+	&__underheader-text {
 		font-size: 18px;
 		line-height: 31px;
+
+		a {
+			display: inline-block;
+			border-bottom: 1px dashed #fff;
+		}
 	}
 
 	&__button {
