--- a/less/partners.less
+++ b/less/partners.less
@@ -26,6 +26,22 @@
 		
 		img {
 			width: 100%;
+			margin-bottom: 30px;
+			text-align: center;
+
+			@media @mobile {
+				margin-bottom: 20px;
+			}
+		}
+	}
+
+	&__text {
+		text-align: center;
+		font-size: 14px;
+		line-height: 22px;
+
+		@media @mobile {
+			line-height: 20px;
 		}
 	}
 }
