--- a/less/day-slot.less
+++ b/less/day-slot.less
@@ -140,13 +140,13 @@
 	&__button-details {
 		width: 280px;
 		padding: 25px;
-		border: 1px solid #6ab980;
+		border: 1px solid @secondary-color;
 		background-color: transparent;
 		font-family: SFUIBold;
 		font-size: 18px;
 
 		&:hover {
-			background-color: #6ab980;
+			background-color: @secondary-color-hover;
 		}
 
 		@media @mobile {
