--- a/less/everyweek-cashback.less
+++ b/less/everyweek-cashback.less
@@ -242,12 +242,12 @@
 	&__button {
 		width: 345px;
 		padding: 25px;
-		background-color: #6ab980;
+		background-color: @secondary-color;
 		font-family: SFUIBold;
 		font-size: 16px;
 
 		&:hover {
-			background-color: #589f6c;
+			background-color: @secondary-color-hover;
 		}
 
 		@media @mobile {
