--- a/less/incomes.less
+++ b/less/incomes.less
@@ -37,7 +37,7 @@
 			z-index: -1;
 			width: 328px;
 			height: 70px;
-			background-color: #6ab980;
+			background-color: @secondary-color;
 			opacity: 0.8;
 		}
 
