--- a/less/modals.less
+++ b/less/modals.less
@@ -847,7 +847,7 @@
 	justify-content: center;
 	width: 250px;
 	padding: 10px;
-	border: 1px dashed #6ab980;
+	border: 1px dashed @secondary-color;
 	text-align: center;
 
 	@media @tablet {
