--- a/less/partner.less
+++ b/less/partner.less
@@ -39,7 +39,7 @@
 				right: -10px;
 				width: ~"calc(100% + 25px)";
 				height: 70px;
-				background-color: #6ab980;
+				background-color: @secondary-color;
 			}
 
 			@media @mobile {
