--- a/less/popular-games.less
+++ b/less/popular-games.less
@@ -26,11 +26,11 @@
 		margin-top: 20px;
 		margin-bottom: 20px;
 		padding: 20px;
-		background-color: #6ab980;
+		background-color: @secondary-color;
 		font-size: 14px;
 
 		&:hover {
-			background-color: #589f6c;
+			background-color: @secondary-color-hover;
 		}
 	}
 
@@ -40,7 +40,7 @@
 		padding: 20px;
 		margin-top: 20px;
 		margin-bottom: 20px;
-		border: 2px solid #6ab980;
+		border: 2px solid @secondary-color;
 		background-color: transparent;
 		font-family: SFUIBold;
 		font-size: 16px;
@@ -48,7 +48,7 @@
 		cursor: pointer;
 
 		&:hover {
-			background-color: #6ab980;
+			background-color: @secondary-color-hover;
 		}
 	}
 }
