--- a/less/registration-form-mini.less
+++ b/less/registration-form-mini.less
@@ -220,10 +220,10 @@
 	background-color: rgba(76, 133, 161, 0.7);
 
 	.registration-form-mini__button {
-		background-color: #6ab980;
+		background-color: @secondary-color;
 
 		&:hover {
-			background-color: #589f6c;
+			background-color: @secondary-color-hover;
 		}
 	}
 }
@@ -234,10 +234,10 @@
 	background-color: rgba(76, 133, 161, 0.7);
 
 	.registration-form-mini__button {
-		background-color: #6ab980;
+		background-color: @secondary-color;
 
 		&:hover {
-			background-color: #589f6c;
+			background-color: @secondary-color-hover;
 		}
 	}
 }
