--- a/less/tournament.less
+++ b/less/tournament.less
@@ -361,7 +361,7 @@
 
 	&__cell-header {
 		padding: 20px 0;
-		background-color: #6ab980;
+		background-color: @secondary-color;
 		text-align: center;
 
 		@media @mobile {
@@ -374,7 +374,7 @@
 
 		&:nth-child(2) {
 			width: 135px;
-			background-color: #349d5e;
+			background-color: @secondary-color-hover;
 		}
 
 		&:nth-child(3) {
