--- a/less/variables.less
+++ b/less/variables.less
@@ -6,3 +6,8 @@
 	padding-right: 10px;
 	padding-left: 10px;
 }
+
+@main-color: #ed383f;
+@main-color-hover: #de3137;
+@secondary-color: #005fdc;
+@secondary-color-hover: #0257c8;
