--- a/less/header.less
+++ b/less/header.less
@@ -42,15 +42,17 @@
 	}
 	
 	&__second-button {
-		padding: 15px 20px;
+		padding: 12px 20px;
 		margin-top: 15px;
 		margin-bottom: 15px;
-		background-color: #5da972;
 		transition: 0.1s;
 		font-size: 16px;
+		background-color: transparent;
+		border: 3px solid @secondary-color;
 
 		&:hover {
-			background-color: #589f6c;
+			border: 3px solid @secondary-color-hover;
+			background-color: @secondary-color-hover;
 		}
 
 		@media @mobile {
@@ -112,7 +114,7 @@
 
 	&__mobile-enter {
 		padding: 5px 0;
-		border: 2px solid #5da972;
+		border: 2px solid @secondary-color;
 	}
 
 	&__logo {
