--- a/less/registration.less
+++ b/less/registration.less
@@ -96,7 +96,7 @@
 
 		@media @mobile {
 			margin-bottom: 5px;
-			font-size: 16px;
+			font-size: 14px;
 		}
 	}
 
@@ -108,8 +108,9 @@
 		text-transform: uppercase;
 
 		@media @mobile {
-			margin-bottom: 5px;
-			font-size: 20px;
+			margin-bottom: 0
+			;
+			font-size: 16px;
 			line-height: 25px;
 		}
 	}
@@ -121,8 +122,8 @@
 		font-family: SFUIHeavy;
 
 		@media @mobile {
-			font-size: 30px;
-			margin-bottom: 5px;
+			font-size: 24px;
+			margin-bottom: 0;
 		}
 	}
 
@@ -143,6 +144,10 @@
 
 		@media @tablet {
 			flex-wrap: wrap;
+		}
+
+		@media @mobile {
+			padding-top: 0;
 		}
 	}
 
@@ -183,6 +188,7 @@
 
 		@media @mobile {
 			width: 100%;
+			margin-bottom: 5px;
 		}
 	}
 
