--- a/less/slider.less
+++ b/less/slider.less
@@ -213,7 +213,7 @@
 
 	@media @mobile {
 		width: 100%;
-		margin-bottom: 5%;
+		margin-bottom: 5px;
 	}
 
 	> span {
@@ -229,7 +229,7 @@
 		}
 
 		@media @mobile {
-			font-size: 40px;
+			font-size: 30px;
 		}
 	}
 
@@ -243,6 +243,10 @@
 			margin-bottom: 5px;
 			font-size: 30px;
 		}
+
+		@media @mobile {
+			font-size: 22px;
+		}
 	}
 
 	&__third-line {
@@ -250,8 +254,12 @@
 		margin-bottom: 15px;
 
 		@media @tablet {
-		margin-bottom: 10px;
+			margin-bottom: 10px;
 			font-size: 16px;
+		}
+
+		@media @mobile {
+			margin-bottom: 5px;
 		}
 	}
 
