--- a/less/tabs.less
+++ b/less/tabs.less
@@ -202,10 +202,10 @@
 		padding: 20px;
 		margin-top: 20px;
 		margin-bottom: 20px;
-		background-color: #6ab980;
+		background-color: @secondary-color;
 
 		&:hover {
-			background-color: #589f6c;
+			background-color: @secondary-color-hover;
 		}
 	}
 
@@ -282,12 +282,12 @@
 		padding: 20px;
 		margin-top: 20px;
 		margin-bottom: 20px;
-		border: 2px solid #6ab980;
+		border: 2px solid @secondary-color;
 		transition: 0.1s;
 		cursor: pointer;
 
 		&:hover {
-			background-color: #65ad79;
+			background-color: @secondary-color-hover;
 		}
 	}
 }
