--- a/less/modals.less
+++ b/less/modals.less
@@ -1021,5 +1021,11 @@
 		@media @mobile {
 			line-height: 18px;
 		}
+
+		a {
+			display: inline-block;
+			color: #cccccc;			
+			border-bottom: 1px dashed #cccccc;
+		}
 	}
 }
